Fixed author page controls visibiity

--- a/src/components/Author/AuthorCard/AuthorCard.module.scss
+++ b/src/components/Author/AuthorCard/AuthorCard.module.scss
@@ -426,6 +426,10 @@
   }
 }
 
+.shareControl {
+  display: inline-block;
+}
+
 .buttonSubscribe {
   align-items: center;
   aspect-ratio: 1/1;
